fixed home page color contrast

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    background-color: #489A35;
+    background-color: #387929;
 }
