--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -32,7 +32,7 @@
   flex: 1;
   height: 100%;
   color: white;
-  p {
+  a {
     font-size: 1rem;
     margin: 0 .5rem;
   }
