--- a/src/components/PropBets/PropBets.module.scss
+++ b/src/components/PropBets/PropBets.module.scss
@@ -190,7 +190,7 @@
   height: 7em;
   width: 7rem;
   border: 2px solid yellow;
-  background-color: #489A35;
+  background-color: #387929;
   font-weight: bold;
   margin: 0;
   z-index: 1;
